--- a/app/package.json
+++ b/app/package.json
@@ -2,5 +2,12 @@
   "name": "app",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "init": "ts-node src/main.ts"
+  },
+  "dependencies": {
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
+  }
 }
