--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "init": "ts-node src/main.ts"
+    "bot": "ts-node src/main.ts"
   },
   "dependencies": {
     "ts-node": "^10.4.0",
