--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,11 @@
     "bot": "ts-node src/main.ts"
   },
   "dependencies": {
+    "ethers": "^5.6.9",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
+  },
+  "devDependencies": {
+    "@types/node": "^18.0.3"
   }
 }
